samples/errors/include.fls
include "samples/include/error.fls" as whatever
console.log(whatever.a)
